ready5, se actualizo el update de machine poniendo ceros

--- a/src/it/test.hbs
+++ b/src/it/test.hbs
@@ -139,99 +139,4 @@
    }
 </style>
 
-
-<div class="ec_wrapper">
-  <div class="cabecera titulo2">
-    <div class="">
-      <div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div>
-    </div>
-    <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
-    <div id="message">Tambox 1.0</div>
-    <div></div>
-    <div class="ec_btn volver" id='security_page'><i class="far fa-list-alt fa-2x"></i></div>
-  </div>
-
-  <div class="area_trabajo_logo ec_panel">
-    <div class="logo">
-      <img src="img/logo_tambo.png" alt="Tambox" width="380" height="200">
-    </div>
-  </div>
-
-  <div class="area_trabajo ec_panel">
-    <div class="ec_card2 resumen">
-      <p>Remesas Hermes</p>
-      <div class="lista_remesas_hermes" id="lista_remesas_hermesx"></div>
-      <p>fin de la lista</p>
-    </div>
-    <div class="ec_card panel1">
-      <div class="ventanita_log">
-        <ul id="message2"></ul>
-      </div>
-      <div class="botonera">
-        <div><a class="ec_btn" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
-        <div><a class="ec_btn" id="pay_a_10">Pay a 10</a> </div>
-        <div><a class="ec_btn" id="pay_a_20">Pay a 20</a> </div>
-        <div><a class="ec_btn" id="pay_a_50">Pay a 50</a> </div>
-        <div><a class="ec_btn" id="pay_a_60">Pay a 60</a> </div>
-        <div><a class="ec_btn" id="pay_a_100">Pay a 100</a></div>
-        <div><a class="ec_btn" id="pay_a_200">Pay a 200</a></div>
-      </div>
-
-
-
-      <!-- <div><a class="ec_btn" id="read_new_tebs">read_new_tebs</a> </div> -->
-
-    </div>
-    <div class="ec_card panel2">
-      <div><a class="ec_btn_new" id="socket_to_tbm">Send Socket to TBM</a> </div>
-      <div><a class="ec_btn_new" id="orden_sync">Orden Sync</a> </div>
-      <div><a class="ec_btn_new" id="lock_machine">Lock Machine</a> </div>
-      <div><a class="ec_btn_new" id="close_serial_port">Cerrar Puerto Serial</a> </div>
-      <div><a class="ec_btn_new" id="open_serial_port">Abrir Puerto Serial</a> </div>
-      <div><a class="ec_btn_new" id="initialize_validator">Inicializar Validador</a> </div>
-      <div><a class="ec_btn_new" id="send_synch">Synch</a> </div>
-      <div><a class="ec_btn_new" id="send_enable_from_ui">Enable Validator</a> </div>
-      <div><a class="ec_btn_new" id="send_desable_from_ui">Disable Validator</a> </div>
-      <div><a class="ec_btn_new" id="send_all_levels_from_ui">Get All Levels </a> </div>
-      <div><a class="ec_btn_new" id="encripted_poll">encripted poll </a> </div>
-      <div><a class="ec_btn_new" id="reset_from_ui">reset </a> </div>
-      <div><a class="ec_btn_new" id="stop_polling_from_ui">stop pooling </a> </div>
-      <div><a class="ec_btn_new" id="online_from_ui">send onlineto tbm </a> </div>
-    </div>
-    <div class="ec_card2 resumen2">
-      <p>Remesas</p>
-      <div class="lista_remesas"></div>
-      <p>fin de la lista</p>
-    </div>
-  </div>
-  <div class="pie_de_pagina">Creado por EC-HOME AUTOMATION PERU.</div>
-</div>
-
-<div class="popup" id="popup" style="display:none">
-  <div id="overlay-back">1</div>
-  <div id="overlay">
-    <div class="grupo3">
-      <div></div>
-      <div id="titulo_popup">BLOQUEADA</div>
-      <div></div>
-      <div></div>
-      <div class="texto_en_overlay">
-        <p>Esta maquina esta bloqueada, no realizara ninguna operacion, hasta que sea desbloqueada desde la central</p>
-      </div>
-      <div></div>
-      <div></div>
-      <div class="tbm_status">
-        TBM adress is :
-      </div>
-      <div></div>
-      <div></div>
-      <div><img src="img/tbm_offline.png" alt="tbm_status" width="100" height="100"></div>
-      <div></div>
-      <div></div>
-      <div id="Check-In"><a class="ec_btn">Check in to TBM</a></div>
-      <!-- <div><a class="btn" style="width:120px;" id="opc1">Opcion1</a></div> -->
-      <!-- <div><a class="btn" style="width:120px;" id="testy">Cerrar</a></div> -->
-    </div>
-  </div>
-</div>
-<!-- </div> -->
+scr
